--- a/gulp + WorkTemplate/package.json
+++ b/gulp + WorkTemplate/package.json
@@ -25,7 +25,7 @@
     "gulp-rsync": "0.0.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svg-sprites": "^4.1.2",
     "gulp-svgmin": "^2.1.0",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
