--- a/gulp+webpack2.0/package.json
+++ b/gulp+webpack2.0/package.json
@@ -20,6 +20,8 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-cache": "^1.1.3",
+    "gulp-cheerio": "^1.0.0",
+    "gulp-cheerio-clean-svg": "github:Hiswe/gulp-cheerio-clean-svg",
     "gulp-clean-css": "^4.2.0",
     "gulp-file-include": "^2.1.0",
     "gulp-imagemin": "^6.1.0",
