--- a/gulp+webpack2.0/package.json
+++ b/gulp+webpack2.0/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "bezier-easing": "^2.1.0",
   	"@typescript-eslint/eslint-plugin": "^3.9.0",
   	"@typescript-eslint/parser": "^3.9.0",
   	"autoprefixer": "^8.6.0",
@@ -39,7 +40,7 @@
   	"gulp-sourcemaps": "^2.6.5",
   	"gulp-svg-sprites": "^4.1.2",
   	"gulp-typescript": "^6.0.0-alpha.1",
-  	"gulp-uglify": "^3.0.2",
+  	"gulp-uglify-es": "^2.0.0",
   	"gulp-util": "^3.0.8",
   	"gulp-webpack": "^1.5.0",
   	"imagemin-jpeg-recompress": "^6.0.0",
